--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -19,10 +19,20 @@
     margin: 0 auto;
     padding: 0 15px;
   }
-  
+
   .header {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
+  
+  .header-container {
+    display: flex;
+    align-items: center;
+  }
+
+  .header-logo {
+    display: block;
+    text-decoration: none;
   }
   
   .header-logo1 {
@@ -43,13 +53,20 @@
     letter-spacing: 0.03em;
   }
   
+  .header-list {
+    display: flex;
+    gap: 50px;
+    margin-right: 344px;
+    margin-left: auto;
+  }
+  
   .header-link {
     color: var(--text-color);
     font-size: 14px;
     font-weight: 500;
     line-height: normal;
     letter-spacing: 0.02em;
-    word-wrap: break-word
+    text-decoration: none;
   }
   
   .header-link:hover {
@@ -60,13 +77,18 @@
     letter-spacing: 0.02em;
   }
   
+  .header-autorisations {
+    display: flex;
+    gap: 50px;
+  }
+  
   .header-contacts {
     color: var(--additional-text-color);
     font-size: 14px;
     font-weight: 500;
     line-height: normal;
     letter-spacing: 0.02em;
-    word-wrap: break-word
+    text-decoration: none;
   }
   
   .header-contacts:hover {
@@ -77,12 +99,16 @@
     letter-spacing: 0.02em;
   }
   
-  
   /* Hero Section */
   
   .hero-section {
     padding-top: 94px;
     padding-bottom: 94px;
+  }
+
+  .hero-list {
+    display: flex;
+    justify-content: center;
   }
   
   .hero-button {
@@ -97,6 +123,7 @@
     height: 38px;
     flex-shrink: 0;
     background: var(--background-color-ourteam);
+    margin-bottom: 50px;
   }
   
   .hero-button:hover {
@@ -112,6 +139,18 @@
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
       0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
   }
+
+  .hero-posters {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    column-gap: 30px;
+    row-gap: 20px;
+  }
+
+  .hero-poster {
+    width: 370px;
+  }
   
   .hero-title {
     color: var(--text-color);
@@ -119,6 +158,8 @@
     font-weight: 700;
     line-height: 2;
     letter-spacing: 0.02em;
+    margin-top: 20px;
+    margin-bottom: 4px;
   }
   
   .hero-text {
@@ -127,12 +168,19 @@
     font-weight: 400;
     line-height: 1.8;
     letter-spacing: 0.04em;
+    margin-bottom: 20px;
   }
   
   footer {
     background-color: var(--background-color-accent);
     padding-top: 60px;
     padding-bottom: 60px;
+  }
+  
+  .footer-logo {
+    margin-bottom: 20px;
+    display: block;
+    text-decoration: none;
   }
   
   .footer-logo1 {
@@ -142,6 +190,7 @@
     line-height: normal;
     font-weight: 700;
     letter-spacing: 0.03em;
+    margin-bottom: 20px;
   }
   
   .footer-logo2 {
@@ -151,6 +200,7 @@
     line-height: normal;
     font-weight: 700;
     letter-spacing: 0.03em;
+    margin-bottom: 20px;
   }
   
   .footer-address {
@@ -161,13 +211,27 @@
     letter-spacing: 0.42px;
     word-wrap: break-word;
     font-style: normal;
+    margin-bottom: 9px;
+    display: block;
   }
   
-  .footer-email,
+  .footer-email {
+    color: var(--additional-text-color);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.7;
+    letter-spacing: 0.03em;
+    display: block;
+    margin-bottom: 9px;
+    text-decoration: none;
+  }
+  
   .footer-phone {
     color: var(--additional-text-color);
     font-size: 14px;
     font-weight: 400;
     line-height: 1.7;
     letter-spacing: 0.03em;
+    text-decoration: none;
   }
+  
