--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -148,7 +148,9 @@
   }
 
   .hero-poster {
-    width: 370px;
+    flex-basis: calc((100% - (30px * 2)) / 3);
+    height: 404px;
+
   }
   
   .hero-title {
@@ -169,7 +171,7 @@
     font-weight: 400;
     line-height: 1.8;
     letter-spacing: 0.04em;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
     margin-left: 24px;
     margin-right: 24px;
   }
