--- a/css/reset.css
+++ b/css/reset.css
@@ -50,3 +50,13 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
+img {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+}
+
+button {
+    cursor: pointer;
+}
