--- a/css/style.css
+++ b/css/style.css
@@ -252,7 +252,7 @@
     font-weight: 400;
     line-height: normal;
     letter-spacing: 0.04em;
-    margin-bottom: 30px;
+    padding-bottom: 30px;
   }
   
   footer {
