--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -15,7 +15,6 @@
   }
   
   .container {
-    outline: solid 2px red;
     width: 1200px;
     margin: 0 auto;
     padding: 0 15px;
@@ -24,6 +23,7 @@
   .header {
     padding-top: 24px;
     padding-bottom: 25px;
+    border: 1px solid #ECECEC;
   }
   
   .header-container {
@@ -133,6 +133,7 @@
     line-height: 1.6;
     border-radius: 4px;
     background: var(--hover-color);
+    box-shadow: 0px 2px 2px 0px #0000001F, 0px 1px 2px 0px #00000014, 0px 3px 1px 0px #0000001A;
   }
 
   .hero-posters {
@@ -146,8 +147,13 @@
   .hero-poster {
     flex-basis: ((100% - 2 * 30px) / 3);
     background-color: var(--accent-color);
-    border: 1px solid #EEEEEE
-    }
+    border: 1px solid #EEEEEE;
+  }
+
+  .hero-poster:hover {
+    box-shadow: 1px 4px 6px 0px #00000029, 0px 4px 4px 0px #0000000F, 0px 1px 1px 0px #0000001F;
+    cursor: pointer;
+  }
   
   .hero-title {
     color: var(--text-color);
