--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,8 @@ body {
 /* Hero Section */
 
 .hero-section {
-  background-image: url(../img/working.webp);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/working.webp);
+  
   padding-top: 200px;
   padding-bottom: 200px;
 }
