--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ body {
 
 .hero-section {
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/working.webp);
-  
+  background-repeat: no-repeat;
   padding-top: 200px;
   padding-bottom: 200px;
 }
