--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,16 @@ body {
   gap: 50px;
 }
 
+.header-item2 {
+  display: flex;
+  align-items: center;
+  color: var(--additional-text-color);
+}
+
+.header-item2:hover {
+  color: var(--hover-color);
+  cursor: pointer;
+}
 .header-contacts {
   color: var(--additional-text-color);
   font-size: 14px;
@@ -97,10 +107,28 @@ body {
   letter-spacing: 0.02em;
 }
 
+.header-icon-mail {
+  width: 16px;
+  height: 12px;
+  margin-right: 10px;
+  fill: var(--additional-text-color);
+}
+
+.header-icon-phone {
+  width: 10px;
+  height: 16px;
+  margin-right: 10px;
+  fill: var(--additional-text-color);
+}
+
 /* Hero Section */
 
 .hero-section {
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/working.webp);
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../img/working.webp);
   background-repeat: no-repeat;
   background-size: cover;
   padding-top: 200px;
@@ -252,6 +280,7 @@ body {
   display: flex;
   align-items: center;
   flex-direction: column;
+  justify-content: center;
 }
 
 .team-title {
@@ -271,7 +300,8 @@ body {
 
 .team-item {
   background-color: var(--accent-color);
-  box-shadow: 0px 2px 1px 0px #00000033, 0px 1px 1px 0px #00000024, 0px 1px 3px 0px #0000001F;
+  box-shadow: 0px 2px 1px 0px #00000033, 0px 1px 1px 0px #00000024,
+    0px 1px 3px 0px #0000001f;
 }
 
 .team-photo {
@@ -295,7 +325,86 @@ body {
   font-weight: 400;
   line-height: normal;
   letter-spacing: 0.04em;
+  margin-bottom: 16px;
+}
+
+.team-icons {
+  display: flex;
+  column-gap: 10px;
+  padding: 0px 32px;
   padding-bottom: 30px;
+}
+
+.team-icon-container {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  border-radius: 23px;
+}
+
+.team-icon-container:hover {
+  background-color: var(--hover-color);
+}
+
+.team-icon {
+  width: 20px;
+  height: 20px;
+  fill: #afb1b8;
+  cursor: pointer;
+  padding: 12px;
+}
+
+.team-icon:hover {
+  fill: var(--accent-color);
+}
+
+.customers-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.customers-title {
+  color: var(--text-color);
+  text-align: center;
+  font-family: Roboto;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 1.08px;
+  margin-bottom: 50px;
+}
+
+.customers-icons {
+  display: flex;
+  column-gap: 30px;
+}
+
+.customers-icon-container {
+  width: 170px;
+  height: 92px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid #afb1b8;
+}
+
+.customers-icon-container:hover {
+  fill: var(--hover-color);
+  cursor: pointer;
+  border: 1px solid var(--hover-color);
+}
+
+.customers-icon {
+  width: 106px;
+  height: 60px;
+  flex-shrink: 0;
+  padding: 16px 32px;
+  fill: #afb1b8;
+  cursor: pointer;
+}
+
+.customers-icon:hover {
+  fill: var(--hover-color);
 }
 
 footer {
@@ -304,9 +413,17 @@ footer {
   padding-bottom: 60px;
 }
 
+.footer-container {
+  flex-direction: row;
+  justify-content: start;
+  align-content: normal;
+  row-gap: 20px;
+  display: flex;
+}
+
 .footer-logo {
-  margin-bottom: 20px;
   display: block;
+  margin-bottom: 20px;
   text-decoration: none;
 }
 
@@ -318,6 +435,7 @@ footer {
   font-weight: 700;
   letter-spacing: 0.03em;
   margin-bottom: 20px;
+  word-wrap: break-word;
 }
 
 .footer-logo2 {
@@ -351,6 +469,7 @@ footer {
   display: block;
   margin-bottom: 9px;
   text-decoration: none;
+  color: rgba(255, 255, 255, 0.60);
 }
 
 .footer-phone {
@@ -360,4 +479,45 @@ footer {
   line-height: 1.7;
   letter-spacing: 0.03em;
   text-decoration: none;
+  color: rgba(255, 255, 255, 0.60);
+}
+
+.footer-icons {
+  margin-left: 70px;
+}
+
+.footer-icon-subtitle {
+  color: #fff;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 0.42px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.footer-icon-list {
+  display: flex;
+  column-gap: 10px;
+}
+
+.footer-icon-item {
+  width: 44px;
+  height: 44px;
+  flex-shrink: 0;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 23px;
+}
+
+.footer-icon-item:hover {
+  background-color: var(--hover-color);
+}
+
+.footer-icon {
+  width: 20px;
+  height: 20px;
+  fill: var(--accent-color);
+  cursor: pointer;
+  padding: 12px;
 }
