--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,244 +1,324 @@
 :root {
-    --accent-color: #ffffff;
-    --text-color: #212121;
-    --background-color-accent: #2f303a;
-    --background-color-ourteam: #f5f4fa;
-    --additional-text-color: #757575;
-    --hover-color: #2196f3;
-    --logo-text-color: #000;
-    --border-linia: #eeeeee;
-  }
-  
-  
-  body {
-    font-family: "Roboto", sans-serif;
-  }
-  
-  .container {
-    width: 1200px;
-    margin: 0 auto;
-    padding: 0 15px;
-  }
+  --accent-color: #ffffff;
+  --text-color: #212121;
+  --background-color-accent: #2f303a;
+  --background-color-ourteam: #f5f4fa;
+  --additional-text-color: #757575;
+  --hover-color: #2196f3;
+  --logo-text-color: #000;
+  --border-linia: #eeeeee;
+}
 
-  .header {
-    padding-top: 24px;
-    padding-bottom: 25px;
-    border: 1px solid #ECECEC;
-  }
-  
-  .header-container {
-    display: flex;
-    align-items: center;
-  }
+body {
+  font-family: "Roboto", sans-serif;
+}
 
-  .header-logo {
-    display: block;
-    text-decoration: none;
-  }
-  
-  .header-logo1 {
-    color: var(--hover-color);
-    font-size: 26px;
-    font-family: Raleway;
-    line-height: normal;
-    font-weight: 700;
-    letter-spacing: 0.03em;
-  }
-  
-  .header-logo2 {
-    color: var(--logo-text-color);
-    font-size: 26px;
-    font-family: Raleway;
-    line-height: normal;
-    font-weight: 700;
-    letter-spacing: 0.03em;
-  }
-  
-  .header-list {
-    display: flex;
-    gap: 50px;
-    margin-right: 344px;
-    margin-left: auto;
-  }
-  
-  .header-link {
-    color: var(--text-color);
-    font-size: 14px;
-    font-weight: 500;
-    line-height: normal;
-    letter-spacing: 0.02em;
-    text-decoration: none;
-  }
-  
-  .header-link:hover {
-    color: var(--hover-color);
-    font-size: 14px;
-    font-weight: 500;
-    line-height: normal;
-    letter-spacing: 0.02em;
-  }
-  
-  .header-autorisations {
-    display: flex;
-    gap: 50px;
-  }
-  
-  .header-contacts {
-    color: var(--additional-text-color);
-    font-size: 14px;
-    font-weight: 500;
-    line-height: normal;
-    letter-spacing: 0.02em;
-    text-decoration: none;
-  }
-  
-  .header-contacts:hover {
-    color: var(--hover-color);
-    font-size: 14px;
-    font-weight: 500;
-    line-height: normal;
-    letter-spacing: 0.02em;
-  }
-  
-  /* Hero Section */
-  
-  .hero-section {
-    padding-top: 94px;
-    padding-bottom: 94px;
-  }
+.container {
+  width: 1190px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
 
-  .hero-list {
-    display: flex;
-    justify-content: center;
-    gap: 8px;
-    margin-bottom: 50px;
-  }
-  
-  .hero-button {
-    color: var(--text-color);
-    text-align: center;
-    font-size: 16px;
-    line-height: 1.6;
-    border-radius: 4px;
-    background: var(--background-color-ourteam);
-    padding: 6px 22px;
-    outline: none;
-    border: none;
-  }
-  
-  .hero-button:hover {
-    color: var(--accent-color);
-    text-align: center;
-    font-size: 16px;
-    line-height: 1.6;
-    border-radius: 4px;
-    background: var(--hover-color);
-    box-shadow: 0px 2px 2px 0px #0000001F, 0px 1px 2px 0px #00000014, 0px 3px 1px 0px #0000001A;
-  }
+.header {
+  padding-top: 24px;
+  padding-bottom: 25px;
+  border: 1px solid #ececec;
+}
 
-  .hero-posters {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    column-gap: 30px;
-    row-gap: 30px;
-  }
+.header-container {
+  display: flex;
+  align-items: center;
+}
 
-  .hero-poster {
-    flex-basis: ((100% - 2 * 30px) / 3);
-    background-color: var(--accent-color);
-    border: 1px solid #EEEEEE;
-  }
+.header-logo {
+  display: block;
+  text-decoration: none;
+}
 
-  .hero-poster:hover {
-    box-shadow: 1px 4px 6px 0px #00000029, 0px 4px 4px 0px #0000000F, 0px 1px 1px 0px #0000001F;
-    cursor: pointer;
-  }
-  
-  .hero-title {
-    color: var(--text-color);
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 2;
-    letter-spacing: 0.06em;
-    margin-top: 20px;
-    margin-bottom: 4px;
-    padding-left: 24px;
-    padding-right: 24px;
-  }
-  
-  .hero-text {
-    color: var(--additional-text-color);
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.8;
-    letter-spacing: 0.04em;
-    padding-bottom: 20px;
-    padding-left: 24px;
-    padding-right: 24px;
-  }
-  
-  footer {
-    background-color: var(--background-color-accent);
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
-  
-  .footer-logo {
-    margin-bottom: 20px;
-    display: block;
-    text-decoration: none;
-  }
-  
-  .footer-logo1 {
-    color: var(--hover-color);
-    font-size: 26px;
-    font-family: Raleway;
-    line-height: normal;
-    font-weight: 700;
-    letter-spacing: 0.03em;
-    margin-bottom: 20px;
-  }
-  
-  .footer-logo2 {
-    color: var(--accent-color);
-    font-size: 26px;
-    font-family: Raleway;
-    line-height: normal;
-    font-weight: 700;
-    letter-spacing: 0.03em;
-    margin-bottom: 20px;
-  }
-  
-  .footer-address {
-    color: var(--accent-color);
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 1.71;
-    letter-spacing: 0.42px;
-    word-wrap: break-word;
-    font-style: normal;
-    margin-bottom: 9px;
-    display: block;
-  }
-  
-  .footer-email {
-    color: var(--additional-text-color);
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 1.7;
-    letter-spacing: 0.03em;
-    display: block;
-    margin-bottom: 9px;
-    text-decoration: none;
-  }
-  
-  .footer-phone {
-    color: var(--additional-text-color);
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 1.7;
-    letter-spacing: 0.03em;
-    text-decoration: none;
-  }
-  
+.header-logo1 {
+  color: var(--hover-color);
+  font-size: 26px;
+  font-family: Raleway;
+  line-height: normal;
+  font-weight: 700;
+  letter-spacing: 0.03em;
+}
+
+.header-logo2 {
+  color: var(--logo-text-color);
+  font-size: 26px;
+  font-family: Raleway;
+  line-height: normal;
+  font-weight: 700;
+  letter-spacing: 0.03em;
+}
+
+.header-list {
+  display: flex;
+  gap: 50px;
+  margin-right: 344px;
+  margin-left: auto;
+}
+
+.header-link {
+  color: var(--text-color);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+}
+
+.header-link:hover {
+  color: var(--hover-color);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.02em;
+}
+
+.header-autorisations {
+  display: flex;
+  gap: 50px;
+}
+
+.header-item2 {
+  display: flex;
+  align-items: center;
+  color: var(--additional-text-color);
+}
+
+.header-item2:hover {
+  color: var(--hover-color);
+  cursor: pointer;
+}
+
+.header-contacts {
+  color: var(--additional-text-color);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+}
+
+.header-contacts:hover {
+  color: var(--hover-color);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.02em;
+}
+
+.header-icon-mail {
+  width: 16px;
+  height: 12px;
+  margin-right: 10px;
+  fill: var(--additional-text-color);
+}
+
+.header-icon-phone {
+  width: 10px;
+  height: 16px;
+  margin-right: 10px;
+  fill: var(--additional-text-color);
+}
+
+/* Hero Section */
+
+.hero-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.hero-list {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  margin-bottom: 50px;
+}
+
+.hero-button {
+  color: var(--text-color);
+  text-align: center;
+  font-size: 16px;
+  line-height: 1.6;
+  border-radius: 4px;
+  background: var(--background-color-ourteam);
+  padding: 6px 22px;
+  outline: none;
+  border: none;
+}
+
+.hero-button:hover {
+  color: var(--accent-color);
+  text-align: center;
+  font-size: 16px;
+  line-height: 1.6;
+  border-radius: 4px;
+  background: var(--hover-color);
+  box-shadow: 0px 2px 2px 0px #0000001f, 0px 1px 2px 0px #00000014,
+    0px 3px 1px 0px #0000001a;
+}
+
+.hero-posters {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  column-gap: 30px;
+  row-gap: 30px;
+}
+
+.hero-poster {
+  flex-basis: ((100% - 2 * 30px) / 3);
+  background-color: var(--accent-color);
+  border: 1px solid #eeeeee;
+}
+
+.hero-poster:hover {
+  box-shadow: 1px 4px 6px 0px #00000029, 0px 4px 4px 0px #0000000f,
+    0px 1px 1px 0px #0000001f;
+  cursor: pointer;
+}
+
+.hero-title {
+  color: var(--text-color);
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  margin-top: 20px;
+  margin-bottom: 4px;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+.hero-text {
+  color: var(--additional-text-color);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.8;
+  letter-spacing: 0.04em;
+  padding-bottom: 20px;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+footer {
+  background-color: var(--background-color-accent);
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.footer-logo {
+  margin-bottom: 20px;
+  display: block;
+  text-decoration: none;
+}
+
+.footer-container {
+  flex-direction: row;
+  justify-content: start;
+  align-content: normal;
+  row-gap: 20px;
+  display: flex;
+}
+
+.footer-logo {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.footer-logo1 {
+  color: var(--hover-color);
+  font-size: 26px;
+  font-family: Raleway;
+  line-height: normal;
+  font-weight: 700;
+  letter-spacing: 0.03em;
+  margin-bottom: 20px;
+}
+
+.footer-logo2 {
+  color: var(--accent-color);
+  font-size: 26px;
+  font-family: Raleway;
+  line-height: normal;
+  font-weight: 700;
+  letter-spacing: 0.03em;
+  margin-bottom: 20px;
+}
+
+.footer-address {
+  color: var(--accent-color);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.71;
+  letter-spacing: 0.42px;
+  word-wrap: break-word;
+  font-style: normal;
+  margin-bottom: 9px;
+  display: block;
+}
+
+.footer-email {
+  color: var(--additional-text-color);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  display: block;
+  margin-bottom: 9px;
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.60);
+}
+
+.footer-phone {
+  color: var(--additional-text-color);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.60);
+}
+
+.footer-icons {
+  margin-left: 70px;
+}
+
+.footer-icon-subtitle {
+  color: #fff;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 0.42px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.footer-icon-list {
+  display: flex;
+  column-gap: 10px;
+}
+
+.footer-icon-item {
+  width: 44px;
+  height: 44px;
+  flex-shrink: 0;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 23px;
+}
+
+.footer-icon-item:hover {
+  background-color: var(--hover-color);
+}
+
+.footer-icon {
+  width: 20px;
+  height: 20px;
+  fill: var(--accent-color);
+  cursor: pointer;
+  padding: 12px;
+}
