--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,11 @@ body {
   text-decoration: none;
 }
 
+.header-logo:focus {
+  display: block;
+  text-decoration: none;
+}
+
 .header-logo1 {
   color: var(--hover-color);
   font-size: 26px;
@@ -75,6 +80,14 @@ body {
   letter-spacing: 0.02em;
 }
 
+.header-link:focus {
+  color: var(--hover-color);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.02em;
+}
+
 .header-autorisations {
   display: flex;
   gap: 50px;
@@ -84,12 +97,20 @@ body {
   display: flex;
   align-items: center;
   color: var(--additional-text-color);
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  word-wrap: break-word;
 }
 
 .header-item2:hover {
   color: var(--hover-color);
   cursor: pointer;
 }
+
+.header-item2:focus {
+  color: var(--hover-color);
+}
+
 .header-contacts {
   color: var(--additional-text-color);
   font-size: 14px;
@@ -97,6 +118,8 @@ body {
   line-height: normal;
   letter-spacing: 0.02em;
   text-decoration: none;
+  display: flex;
+  align-items: center;
 }
 
 .header-contacts:hover {
@@ -105,6 +128,14 @@ body {
   font-weight: 500;
   line-height: normal;
   letter-spacing: 0.02em;
+}
+
+.header-contacts:focus {
+  color: var(--hover-color);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.02em;   
 }
 
 .header-icon-mail {
@@ -121,14 +152,24 @@ body {
   fill: var(--additional-text-color);
 }
 
+.header-autorisations .header-item2:hover .header-icon-mail,
+.header-autorisations .header-item2:hover .header-icon-phone,
+.header-autorisations .header-item2:hover .header-contacts,
+ .header-contacts:focus .header-icon-mail,
+ .header-contacts:focus .header-icon-phone,
+ .header-contacts:focus {
+  fill: #2196f3;
+  color: #2196f3;
+  cursor: pointer;
+ }
+
 /* Hero Section */
 
 .hero-section {
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
-    ),
-    url(../img/working.webp);
+      ),url(../img/working.webp);
   background-repeat: no-repeat;
   background-size: cover;
   padding-top: 200px;
@@ -335,15 +376,21 @@ body {
   padding-bottom: 30px;
 }
 
-.team-icon-container {
+.team-contacts {
   display: flex;
   width: 44px;
   height: 44px;
   border-radius: 23px;
 }
 
-.team-icon-container:hover {
+.team-contacts:hover,
+.team-contacts:focus{
   background-color: var(--hover-color);
+}
+
+.team-contacts:hover .team-icon,
+.team-contacts:focus .team-icon {
+  fill: var(--accent-color);
 }
 
 .team-icon {
@@ -380,7 +427,7 @@ body {
   column-gap: 30px;
 }
 
-.customers-icon-container {
+.customers-contacts {
   width: 170px;
   height: 92px;
   flex-shrink: 0;
@@ -388,11 +435,17 @@ body {
   border: 1px solid #afb1b8;
 }
 
-.customers-icon-container:hover {
+.customers-contacts:hover,
+.customers-contacts:focus {
+  border: var(--hover-color) 1px solid;
+}
+
+.customers-contacts:hover .customers-icon,
+.customers-contacts:focus .customers-icon {   
   fill: var(--hover-color);
-  cursor: pointer;
   border: 1px solid var(--hover-color);
 }
+
 
 .customers-icon {
   width: 106px;
@@ -422,6 +475,12 @@ footer {
 }
 
 .footer-logo {
+  display: block;
+  margin-bottom: 20px;
+  text-decoration: none;
+}
+
+.footer-logo:focus {
   display: block;
   margin-bottom: 20px;
   text-decoration: none;
@@ -502,15 +561,17 @@ footer {
   column-gap: 10px;
 }
 
-.footer-icon-item {
+.footer-contacts {
   width: 44px;
   height: 44px;
   flex-shrink: 0;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 23px;
+  display: block;
 }
 
-.footer-icon-item:hover {
+.footer-contacts:hover,
+.footer-contacts:focus {
   background-color: var(--hover-color);
 }
 
