--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ body {
   font-size: 14px;
   font-weight: 500;
   line-height: normal;
-  letter-spacing: 0.02em;   
+  letter-spacing: 0.02em;
 }
 
 .header-icon-mail {
@@ -155,13 +155,13 @@ body {
 .header-autorisations .header-item2:hover .header-icon-mail,
 .header-autorisations .header-item2:hover .header-icon-phone,
 .header-autorisations .header-item2:hover .header-contacts,
- .header-contacts:focus .header-icon-mail,
- .header-contacts:focus .header-icon-phone,
- .header-contacts:focus {
+.header-contacts:focus .header-icon-mail,
+.header-contacts:focus .header-icon-phone,
+.header-contacts:focus {
   fill: #2196f3;
   color: #2196f3;
   cursor: pointer;
- }
+}
 
 /* Hero Section */
 
@@ -169,7 +169,8 @@ body {
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
-      ),url(../img/working.webp);
+    ),
+    url(../img/working.webp);
   background-repeat: no-repeat;
   background-size: cover;
   padding-top: 200px;
@@ -309,6 +310,26 @@ body {
   gap: 30px;
 }
 
+.work-item {
+  position: relative;
+  z-index: -1;
+}
+
+.work-text {
+  color: var(--accent-color);
+  text-align: center;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 16.41px;
+  letter-spacing: 0.03px;
+  width: 370px; 
+  /* height: 70px; */
+  padding: 27px 0px;
+  background-color: rgba(47, 48, 58, 0.80);
+  position: absolute;
+  top: 225px;
+}
+
 /* Team Section */
 
 .team-section {
@@ -384,7 +405,7 @@ body {
 }
 
 .team-contacts:hover,
-.team-contacts:focus{
+.team-contacts:focus {
   background-color: var(--hover-color);
 }
 
@@ -441,11 +462,10 @@ body {
 }
 
 .customers-contacts:hover .customers-icon,
-.customers-contacts:focus .customers-icon {   
+.customers-contacts:focus .customers-icon {
   fill: var(--hover-color);
   border: 1px solid var(--hover-color);
 }
-
 
 .customers-icon {
   width: 106px;
@@ -528,7 +548,7 @@ footer {
   display: block;
   margin-bottom: 9px;
   text-decoration: none;
-  color: rgba(255, 255, 255, 0.60);
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .footer-phone {
@@ -538,7 +558,7 @@ footer {
   line-height: 1.7;
   letter-spacing: 0.03em;
   text-decoration: none;
-  color: rgba(255, 255, 255, 0.60);
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .footer-icons {
