--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -378,3 +378,77 @@ footer {
   cursor: pointer;
   padding: 12px;
 }
+
+.basement-form {
+  margin-left: 93px;
+  width: 570px;
+}
+
+.basement-form-container {
+  display: flex;
+}
+
+.basement-form-title {
+  color: #fff;
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 0.42px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.basement-form-input {
+  width: 358px;
+  height: 50px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  background: rgba(33, 150, 243, 0);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  margin-right: 12px;
+  padding-left: 16px;
+  color: #fff;
+}
+
+.basement-form-input::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px; 
+  letter-spacing: 0.48px;
+}
+
+.basement-form-button {
+  width: 200px;
+  height: 50px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  color: #fff;
+  text-align: left;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 30px;
+  letter-spacing: 0.96px;
+  padding: 10px 28px 10px 28px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.basement-form-icon {
+  width: 24px;
+  height: 24px;
+  margin-left: 10px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  fill: #fff;
+}
