--- a/css/reset.css
+++ b/css/reset.css
@@ -59,6 +59,7 @@ img {
 
 button {
     cursor: pointer;
+    border: none;
 }
 
 /* button:focus {
@@ -68,3 +69,7 @@ button {
 a:focus {
     outline: none;
 } */
+
+input {
+    padding: 0;
+}
