--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -6,7 +6,7 @@
   --additional-text-color: #757575;
   --hover-color: #2196f3;
   --logo-text-color: #000;
-  --border-linia: #ECECEC;
+  --border-linia: #ececec;
 }
 
 body {
@@ -66,6 +66,7 @@ body {
 }
 
 .header-link {
+  position: relative;
   color: var(--text-color);
   font-size: 14px;
   font-weight: 500;
@@ -88,6 +89,23 @@ body {
   font-weight: 500;
   line-height: normal;
   letter-spacing: 0.02em;
+}
+
+.header-link::after {
+  display: block;
+  background-color: var(--hover-color);
+  position: absolute;
+  bottom: -32px;
+  right: 0px;
+  opacity: 0;
+  content: "";
+  height: 4px;
+  width: 100%;
+  border-radius: 2px;
+}
+
+.header-item:hover .header-link::after {
+  opacity: 1;
 }
 
 .header-autorisations {
@@ -213,6 +231,8 @@ body {
 
 .hero-link {
   text-decoration: none;
+  display: block;
+  position: relative;
 }
 
 .hero-link:focus {
@@ -220,10 +240,46 @@ body {
   outline: none;
 }
 
+.hero-poster:hover .hero-overlay,
+.hero-poster:focus .hero-overlay {
+  width: 370px;
+  height: 294px;
+  background-color: rgba(33, 150, 243, 0.9);
+  position: absolute;
+}
+
+.hero-poster:hover .hero-overlay-text,
+.hero-poster:focus .hero-overlay-text {
+  color: var(--accent-color);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0.54px;
+  position: absolute;
+  opacity: 1;
+}
+
+.hero-overlay-text {
+  position: absolute;
+  top: 63px;
+  left: 23px;
+  opacity: 0;
+}
+
 .hero-poster {
   flex-basis: ((100% - 2 * 30px) / 3);
   background-color: var(--accent-color);
   border: 1px solid #eeeeee;
+}
+
+.hero-subtext {
+  color: #fff;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0.54px;
 }
 
 .hero-poster:hover,
@@ -324,7 +380,7 @@ footer {
   display: block;
   margin-bottom: 9px;
   text-decoration: none;
-  color: rgba(255, 255, 255, 0.60);
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .footer-phone {
@@ -334,7 +390,7 @@ footer {
   line-height: 1.7;
   letter-spacing: 0.03em;
   text-decoration: none;
-  color: rgba(255, 255, 255, 0.60);
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .footer-icons {
@@ -419,7 +475,7 @@ footer {
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 20px; 
+  line-height: 20px;
   letter-spacing: 0.48px;
 }
 
