--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -150,7 +150,7 @@ body {
   display: flex;
   align-items: center;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-property: var(--hover-color);
+  transition-property: color;
   transition-duration: 250ms;
 }
 
@@ -176,7 +176,7 @@ body {
   margin-right: 10px;
   fill: var(--additional-text-color);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-property: var(--hover-color);
+  transition-property: color;
   transition-duration: 250ms;
 }
 
@@ -186,7 +186,7 @@ body {
   margin-right: 10px;
   fill: var(--additional-text-color);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-property: var(--hover-color);
+  transition-property: color;
   transition-duration: 250ms;
 }
 
@@ -226,7 +226,7 @@ body {
   outline: none;
   border: none;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-property: var(--hover-color);
+  transition-property: background-color, box-shadow;
   transition-duration: 250ms;
 }
 
@@ -237,7 +237,7 @@ body {
   font-size: 16px;
   line-height: 1.6;
   border-radius: 4px;
-  background: var(--hover-color);
+  background-color: var(--hover-color);
   box-shadow: 0px 2px 2px 0px #0000001f, 0px 1px 2px 0px #00000014,
     0px 3px 1px 0px #0000001a;
 }
@@ -448,7 +448,7 @@ footer {
   border-radius: 23px;
   display: block;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-property: var(--hover-color);
+  transition-property: backround-color;
   transition-duration: 250ms;
 }
 
@@ -476,7 +476,6 @@ footer {
 
 .basement-form-title {
   color: #fff;
-  font-family: Roboto;
   font-size: 14px;
   font-style: normal;
   font-weight: 700;
