--- a/css/modal.css
+++ b/css/modal.css
@@ -49,6 +49,13 @@
   justify-content: center;
   cursor: pointer;
   stroke: rgba(0, 0, 0, 0.1);
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 250ms;
+  transition-property: fill;
+}
+
+.modal-close-button:hover {
+  fill: var(--hover-color);
 }
 
 .modal-close-icon {
@@ -99,6 +106,14 @@
   height: 40px;
   width: 407px;
   padding-left: 41px;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 250ms;
+  transition-property: fill, border-color;
+}
+
+.modal-input:hover {
+  fill: var(--hover-color);
+  border-color: var(--hover-color);
 }
 
 .modal-input1 {
@@ -114,6 +129,14 @@
   font-weight: 400;
   line-height: 14px;
   letter-spacing: 1%;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 250ms;
+  transition-property: fill, border-color;
+}
+
+.modal-input:hover {
+  fill: var(--hover-color);
+  border-color: var(--hover-color);
 }
 
 .modal-icon {
@@ -122,6 +145,14 @@
   position: absolute;
   top: 30px;
   left: 15px;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 250ms;
+  transition-property: fill, border-color;
+}
+
+.modal-icon:hover{
+  fill: var(--hover-color);
+  border-color: var(--hover-color);
 }
 
 .modal-item:hover .modal-icon,
