--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,9 @@ body {
   font-weight: 500;
   letter-spacing: 0.02em;
   word-wrap: break-word;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 250ms;
+  transition-property: color;
 }
 
 .header-item2:hover {
@@ -174,7 +177,7 @@ body {
   margin-right: 10px;
   fill: var(--additional-text-color);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-property: color;
+  transition-property: color, fill;
   transition-duration: 250ms;
 }
 
@@ -184,7 +187,7 @@ body {
   margin-right: 10px;
   fill: var(--additional-text-color);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-property: color;
+  transition-property: color, fill;
   transition-duration: 250ms;
 }
 
@@ -439,7 +442,7 @@ body {
   height: 44px;
   border-radius: 23px;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-property: background-color;
+  transition-property: background-color, fill;
   transition-duration: 250ms;
 }
 
@@ -459,6 +462,9 @@ body {
   fill: #afb1b8;
   cursor: pointer;
   padding: 12px;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: fill;
+  transition-duration: 250ms;
 }
 
 .team-icon:hover {
@@ -494,7 +500,7 @@ body {
   border-radius: 4px;
   border: 1px solid #afb1b8;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-property: border;
+  transition-property: border, fill;
   transition-duration: 250ms;
 }
 
