--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -451,7 +451,7 @@ footer {
   border-radius: 23px;
   display: block;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-property: backround-color;
+  transition-property: background-color;
   transition-duration: 250ms;
 }
 
