--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto";
 }
 
 .container {
@@ -212,8 +212,8 @@ body {
     url(../img/working.webp);
   background-repeat: no-repeat;
   background-size: cover;
-  padding-top: 200px;
   padding-bottom: 200px;
+  padding-top: 200px;
 }
 
 .hero-container {
